src/test/ui/issues/10000-19999/issue-17001.rs
mod foo {}

fn main() {
    let p = foo { x: () }; //~ ERROR expected struct, variant or union type, found module `foo`
}
